force-app/main/default/objects/Account/fields/AccountAreaSalesLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountAreaSalesLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Área de Negócios do Emissor</label>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipLabel>Parceiros</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>