force-app/main/default/objects/Account/fields/ActivityBranchTxt__c.field-meta.xml
<CustomField>
    <fullName>ActivityBranchTxt__c</fullName>
    <label>Ramo de atividade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Varejo</fullName>
            </value>
            <value>
                <fullName>Atacado</fullName>
            </value>
            <value>
                <fullName>Irrigação/Produtor Rural</fullName>
            </value>
            <value>
                <fullName>Orgão Público</fullName>
            </value>
            <value>
                <fullName>Construtora</fullName>
            </value>
            <value>
                <fullName>Empreiteira</fullName>
            </value>
            <value>
                <fullName>Incorporadora</fullName>
            </value>
            <value>
                <fullName>Companhia Privada</fullName>
            </value>
            <value>
                <fullName>Revenda</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>