force-app/main/default/objects/Account/fields/AddressCoordinates__c.field-meta.xml
<CustomField>
    <fullName>AddressCoordinates__c</fullName>
    <label>Coordenadas da Conta</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>