force-app/main/default/objects/Account/fields/ApprovedCredit__c.field-meta.xml
<CustomField>
    <fullName>ApprovedCredit__c</fullName>
    <formula>NCTotalApprovedNmb__c  -  NCTotalDiscountedNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo aguardando abatimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>