force-app/main/default/objects/Account/fields/AssociatedToIssuerBln__c.field-meta.xml
<CustomField>
    <fullName>AssociatedToIssuerBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a new partner is created, it is not automatically associated to the Issuer Account. This field keeps track of its condition in order to associate it later.</description>
    <label>Associado ao Emissor</label>
    <type>Checkbox</type>
</CustomField>