force-app/main/default/objects/Account/fields/AvaiableCreditFml__c.field-meta.xml
<CustomField>
    <fullName>AvaiableCreditFml__c</fullName>
    <formula>NCTotalGeneratedNmb__c - NCTotalRequestedNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>