force-app/main/default/objects/Account/fields/AvaiableCreditNmb__c.field-meta.xml
<CustomField>
    <fullName>AvaiableCreditNmb__c</fullName>
    <label>Saldo Trade (Aprovado no Financeiro)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>