force-app/main/default/objects/Account/fields/BankTxt__c.field-meta.xml
<CustomField>
    <fullName>BankTxt__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABN Real</fullName>
            </value>
            <value>
                <fullName>Banco do Brasil</fullName>
            </value>
            <value>
                <fullName>BANESPA</fullName>
            </value>
            <value>
                <fullName>Bank Bonston</fullName>
            </value>
            <value>
                <fullName>BCN</fullName>
            </value>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>CEF</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>Itaú</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Safra</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
            <value>
                <fullName>Sudameris</fullName>
            </value>
            <value>
                <fullName>Unibanco</fullName>
            </value>
            <value>
                <fullName>Utiliza factoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>