force-app/main/default/objects/Account/fields/BirthdayPartner1Txt__c.field-meta.xml
<CustomField>
    <fullName>BirthdayPartner1Txt__c</fullName>
    <label>Data de Nascimento Sócio 1</label>
    <type>Date</type>
</CustomField>