force-app/main/default/objects/Account/fields/BirthdayPartner2Txt__c.field-meta.xml
<CustomField>
    <fullName>BirthdayPartner2Txt__c</fullName>
    <label>Data de Nascimento Sócio 2</label>
    <type>Date</type>
</CustomField>