force-app/main/default/objects/Account/fields/BirthdayPartner3Txt__c.field-meta.xml
<CustomField>
    <fullName>BirthdayPartner3Txt__c</fullName>
    <label>Data de Nascimento Sócio 3</label>
    <type>Date</type>
</CustomField>