force-app/main/default/objects/Account/fields/CampaignGroupLkp__c.field-meta.xml
<CustomField>
    <fullName>CampaignGroupLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agrupamento de campanha que a Conta faz parte. Utilizado para as campanhas de Trade Marketing</description>
    <label>Agrupamento de Campanha</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agrupamento de Campanha</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas do Agrupamento de Campanha</relationshipLabel>
    <relationshipName>GroupAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>