force-app/main/default/objects/Account/fields/CarrerTxt__c.field-meta.xml
<CustomField>
    <fullName>CarrerTxt__c</fullName>
    <label>Profissão</label>
    <length>40</length>
    <type>Text</type>
</CustomField>