force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Campo fórmula com o nome do canal. Utilizado apenas para Contas do tipo Agrupamento de Campanha</description>
    <formula>MainAccountLkp__r.ChannelLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal</label>
    <type>Text</type>
</CustomField>