force-app/main/default/objects/Account/fields/ChannelLkp__c.field-meta.xml
<CustomField>
    <fullName>ChannelLkp__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Canal</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>