force-app/main/default/objects/Account/fields/ChannelPVCTxt__c.field-meta.xml
<CustomField>
    <fullName>ChannelPVCTxt__c</fullName>
    <label>Canal PVC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>