force-app/main/default/objects/Account/fields/ClientAreaTxt__c.field-meta.xml
<CustomField>
    <fullName>ClientAreaTxt__c</fullName>
    <label>Área cliente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>