force-app/main/default/objects/Account/fields/CNPJTxt__c.field-meta.xml
<CustomField>
    <fullName>CNPJTxt__c</fullName>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>