force-app/main/default/objects/Account/fields/CodeCustomerTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeCustomerTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código do cliente</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>