force-app/main/default/objects/Account/fields/CodeDepartmentTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeDepartmentTxt__c</fullName>
    <label>Código departamento</label>
    <length>4</length>
    <type>Text</type>
</CustomField>