force-app/main/default/objects/Account/fields/CodePositionTxt__c.field-meta.xml
<CustomField>
    <fullName>CodePositionTxt__c</fullName>
    <label>Código cargo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>