force-app/main/default/objects/Account/fields/ConvertLeadBln__c.field-meta.xml
<CustomField>
    <fullName>ConvertLeadBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que é verdadeiro se a conta é originária de conversão de lead. Preenchido via mapeamento para Emissor, via código para Parceiros</description>
    <label>Lead Convertido?</label>
    <type>Checkbox</type>
</CustomField>