force-app/main/default/objects/Account/fields/CPFPartner1Txt_c__c.field-meta.xml
<CustomField>
    <fullName>CPFPartner1Txt_c__c</fullName>
    <label>CPF Sócio 1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>