force-app/main/default/objects/Account/fields/CPFPartner2Txt__c.field-meta.xml
<CustomField>
    <fullName>CPFPartner2Txt__c</fullName>
    <label>CPF Sócio 2</label>
    <length>11</length>
    <type>Text</type>
</CustomField>