force-app/main/default/objects/Account/fields/CPFRepresentativeTxt__c.field-meta.xml
<CustomField>
    <fullName>CPFRepresentativeTxt__c</fullName>
    <label>CPF Procurador</label>
    <length>11</length>
    <type>Text</type>
</CustomField>