force-app/main/default/objects/Account/fields/CPFTxt__c.field-meta.xml
<CustomField>
    <fullName>CPFTxt__c</fullName>
    <label>CPF</label>
    <length>14</length>
    <type>Text</type>
</CustomField>