force-app/main/default/objects/Account/fields/CustomCheckbox__c.field-meta.xml
<CustomField>
    <fullName>CustomCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomCheckbox</label>
    <type>Checkbox</type>
</CustomField>