force-app/main/default/objects/Account/fields/CustomerProfileTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfileTxt__c</fullName>
    <label>Perfil de Clientes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Governo</fullName>
            </value>
            <value>
                <fullName>Pessoa Física</fullName>
            </value>
            <value>
                <fullName>Pessoa Jurídica</fullName>
            </value>
            <value>
                <fullName>PF e PJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>