force-app/main/default/objects/Account/fields/DescriptionCustomerGroup2Txt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionCustomerGroup2Txt__c</fullName>
    <label>Descrição grupo de clientes 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CustomerGroup2Txt__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>TOP 1</fullName>
            </value>
            <value>
                <fullName>TOP 2</fullName>
            </value>
            <value>
                <fullName>TOP Interm Obsoleto</fullName>
            </value>
            <value>
                <fullName>TOP 0</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>CONQUISTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>