force-app/main/default/objects/Account/fields/DescriptionFullSupplyTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionFullSupplyTxt__c</fullName>
    <label>Descrição fornecimento completo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FullSupplyTxt__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>descrição</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>