force-app/main/default/objects/Account/fields/DescriptionICMSTaxPayerTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionICMSTaxPayerTxt__c</fullName>
    <label>Descrição ICMS Tax Payer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ICMSTaxPayerTxt__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contribuinte ICMS</fullName>
            </value>
            <value>
                <fullName>Contribuinte isento IE</fullName>
            </value>
            <value>
                <fullName>Não Contribuinte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>