force-app/main/default/objects/Account/fields/DescriptionIndustryTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionIndustryTxt__c</fullName>
    <label>Descrição setor industrial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IndustryTxt__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contribuinte</fullName>
            </value>
            <value>
                <fullName>Não-Contribuinte</fullName>
            </value>
            <value>
                <fullName>Contribuinte SC</fullName>
            </value>
            <value>
                <fullName>Pró Emprego</fullName>
            </value>
            <value>
                <fullName>Contribuinte 12%</fullName>
            </value>
            <value>
                <fullName>Contribuinte c/ ates</fullName>
            </value>
            <value>
                <fullName>Fornecedor Simples</fullName>
            </value>
            <value>
                <fullName>Transp. isento MG</fullName>
            </value>
            <value>
                <fullName>Transp.SC/SP-red.ICM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>