force-app/main/default/objects/Account/fields/DescriptionNielsenZoneTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionNielsenZoneTxt__c</fullName>
    <label>Descrição Zona Nielsen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Varejo Geral</fullName>
            </value>
            <value>
                <fullName>Varejo Direcionado</fullName>
            </value>
            <value>
                <fullName>Atacado Generalista</fullName>
            </value>
            <value>
                <fullName>Atacado Constr.Imobi</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Distribuidor Exclusi</fullName>
            </value>
            <value>
                <fullName>Empreiteira/Construt</fullName>
            </value>
            <value>
                <fullName>Órgão Público</fullName>
            </value>
            <value>
                <fullName>Instaladora</fullName>
            </value>
            <value>
                <fullName>Construtora Imobilia</fullName>
            </value>
            <value>
                <fullName>Indústria</fullName>
            </value>
            <value>
                <fullName>Home Center</fullName>
            </value>
            <value>
                <fullName>Perfurador Medio</fullName>
            </value>
            <value>
                <fullName>Cia Aguas/Cia Privat</fullName>
            </value>
            <value>
                <fullName>Inter-company</fullName>
            </value>
            <value>
                <fullName>Consumidor final</fullName>
            </value>
            <value>
                <fullName>Prod. Rural/Emp.Agro</fullName>
            </value>
            <value>
                <fullName>Eventual</fullName>
            </value>
            <value>
                <fullName>Coml. Exportadora</fullName>
            </value>
            <value>
                <fullName>Distr. Geomecanico</fullName>
            </value>
            <value>
                <fullName>Revenda Especial.1</fullName>
            </value>
            <value>
                <fullName>Revenda Especial.2</fullName>
            </value>
            <value>
                <fullName>Perfurador Grande</fullName>
            </value>
            <value>
                <fullName>Cons.Proprio.Infra-E</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Agroindustria</fullName>
            </value>
            <value>
                <fullName>Consum End Entrega</fullName>
            </value>
            <value>
                <fullName>BIDIM-Artes Gráficas</fullName>
            </value>
            <value>
                <fullName>BIDIM-Automotivo</fullName>
            </value>
            <value>
                <fullName>BIDIM-Calçados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>