force-app/main/default/objects/Account/fields/DescriptionSubfiscalGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionSubfiscalGroupTxt__c</fullName>
    <label>Descrição grupo subfiscal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubfiscalGroupTxt__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Isento de sub.fiscal</fullName>
            </value>
            <value>
                <fullName>Sujeito ST - Consumo DIFA</fullName>
            </value>
            <value>
                <fullName>Cliente c/Liminar não sujeito a Subst. T</fullName>
            </value>
            <value>
                <fullName>Sujeito a Subst.Tributaria Parceiros</fullName>
            </value>
            <value>
                <fullName>Sujeito redução ICMS ST</fullName>
            </value>
            <value>
                <fullName>SImples nacional</fullName>
            </value>
            <value>
                <fullName>Sujeito a sub.fiscal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>