force-app/main/default/objects/Account/fields/EmailTxt__c.field-meta.xml
<CustomField>
    <fullName>EmailTxt__c</fullName>
    <label>Email Comercial</label>
    <type>Email</type>
</CustomField>