force-app/main/default/objects/Account/fields/FidelityTxt__c.field-meta.xml
<CustomField>
    <fullName>FidelityTxt__c</fullName>
    <label>Fidelidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fidelity</valueSetName>
    </valueSet>
</CustomField>