force-app/main/default/objects/Account/fields/GroupCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>GroupCodeTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código do Agrupamento</label>
    <length>5</length>
    <type>Text</type>
</CustomField>