force-app/main/default/objects/Account/fields/IndustryTxt__c.field-meta.xml
<CustomField>
    <fullName>IndustryTxt__c</fullName>
    <label>Setor industrial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>Contribuinte</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>Não Contribuinte</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>Contribuinte SC</label>
            </value>
            <value>
                <fullName>0004</fullName>
                <label>Pró Emprego</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>