force-app/main/default/objects/Account/fields/IntegrationError__c.field-meta.xml
<CustomField>
    <fullName>IntegrationError__c</fullName>
    <label>Erro Integração</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>