force-app/main/default/objects/Account/fields/IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStatus__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Status da Integração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IntegrationStatus</valueSetName>
    </valueSet>
</CustomField>