force-app/main/default/objects/Account/fields/LastOrderDateDte__c.field-meta.xml
<CustomField>
    <fullName>LastOrderDateDte__c</fullName>
    <description>Indica a data do último pedido realizado, utilizado para popular semáforo solciitado pelo SAC</description>
    <label>Data do Último Pedido</label>
    <type>DateTime</type>
</CustomField>