force-app/main/default/objects/Account/fields/LastPurchaseImageFml__c.field-meta.xml
<CustomField>
    <fullName>LastPurchaseImageFml__c</fullName>
    <description>Indica se cliente está há mais de 90 dias sem criar pedidos</description>
    <formula>IF(ISBLANK(LastOrderDateDte__c) || NOW() - LastOrderDateDte__c &gt;= 90,
IMAGE(&apos;/resource/RedLight&apos;, &quot;Cliente Inativo&quot;, 40,40),
IMAGE(&apos;/resource/GreenLight&apos;, &quot;Cliente Ativo&quot;, 40,40))</formula>
    <label>Última Compra</label>
    <type>Text</type>
</CustomField>