force-app/main/default/objects/Account/fields/LastYearRevenues__c.field-meta.xml
<CustomField>
    <fullName>LastYearRevenues__c</fullName>
    <label>Faturamento do último ano</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>