force-app/main/default/objects/Account/fields/LeadActivitySectorTxt__c.field-meta.xml
<CustomField>
    <fullName>LeadActivitySectorTxt__c</fullName>
    <label>Setor de Atividade do Lead</label>
    <length>25</length>
    <type>Text</type>
</CustomField>