force-app/main/default/objects/Account/fields/LeadDistributionChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>LeadDistributionChannelTxt__c</fullName>
    <label>Canal de Distribuição do Lead</label>
    <length>25</length>
    <type>Text</type>
</CustomField>