force-app/main/default/objects/Account/fields/LeadNameTxt__c.field-meta.xml
<CustomField>
    <fullName>LeadNameTxt__c</fullName>
    <description>Recebe o nome do lead através do mapeamento entre conta e lead.</description>
    <label>Nome do lead</label>
    <length>80</length>
    <type>Text</type>
</CustomField>