force-app/main/default/objects/Account/fields/LeadSalesOrganizationTxt__c.field-meta.xml
<CustomField>
    <fullName>LeadSalesOrganizationTxt__c</fullName>
    <label>Organização de Vendas do Lead</label>
    <length>25</length>
    <type>Text</type>
</CustomField>