force-app/main/default/objects/Account/fields/LeadSellerLkp__c.field-meta.xml
<CustomField>
    <fullName>LeadSellerLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor do Lead</label>
    <referenceTo>Seller__c</referenceTo>
    <relationshipLabel>Contas (Vendedor do Lead)</relationshipLabel>
    <relationshipName>ConvertedAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>