force-app/main/default/objects/Account/fields/MainAccountLkp__c.field-meta.xml
<CustomField>
    <fullName>MainAccountLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conta principal do Agrupamento de Campanha.</description>
    <label>Conta Principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conta Principal</relationshipLabel>
    <relationshipName>MainAccount</relationshipName>
    <type>Lookup</type>
</CustomField>