force-app/main/default/objects/Account/fields/MainSalesAreaLkp__c.field-meta.xml
<CustomField>
    <fullName>MainSalesAreaLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Área de Vendas Principal</label>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipLabel>Agrupamento de Campanha</relationshipLabel>
    <relationshipName>SalesArea</relationshipName>
    <type>Lookup</type>
</CustomField>