force-app/main/default/objects/Account/fields/MaritalStatusTxt__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatusTxt__c</fullName>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solteiro(a)</fullName>
            </value>
            <value>
                <fullName>Casado(a)</fullName>
            </value>
            <value>
                <fullName>Divorciado(a)</fullName>
            </value>
            <value>
                <fullName>Viúvo(a)</fullName>
            </value>
            <value>
                <fullName>Separado(a)</fullName>
            </value>
            <value>
                <fullName>Companheiro(a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>