force-app/main/default/objects/Account/fields/MonthlyRevenueConnectionNmb__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRevenueConnectionNmb__c</fullName>
    <description>Histórico de Faturamento de conexão do mês corrente</description>
    <label>Conexão Mês Corrente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>