force-app/main/default/objects/Account/fields/MonthlyRevenueIrrigationNmb__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRevenueIrrigationNmb__c</fullName>
    <description>Histórico de Faturamento Mix Irriga do mês corrente</description>
    <label>Mix Irriga Mês Corrente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>