force-app/main/default/objects/Account/fields/MonthlyRevenueRunnerNmb__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRevenueRunnerNmb__c</fullName>
    <description>Histórico de Faturamento de Produtos Runner do mês atual</description>
    <label>Produtos Runner Mês Corrente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>