force-app/main/default/objects/Account/fields/MonthlyRevenueSourceTxt__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRevenueSourceTxt__c</fullName>
    <label>Fonte de Faturamento Mensal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Balanço</fullName>
            </value>
            <value>
                <fullName>Relação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>